crates/aihu-css-core/tests/snapshots/light_scope_snapshot__bare_host_lowers_to_scope.snap
---
source: crates/aihu-css-core/tests/light_scope_snapshot.rs
assertion_line: 35
expression: "compile_sfc_scoped(&light(\":host { display: block; }\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style (scoped) */
@scope ([data-a="a1b2c3d4"]) to ([data-a]) {
:scope {
  display: block;
}
}
