crates/aihu-css-core/tests/snapshots/light_scope_snapshot__comma_inside_an_attribute_value_does_not_split_the_selector_list.snap
---
source: crates/aihu-css-core/tests/light_scope_snapshot.rs
assertion_line: 175
expression: "compile_sfc_scoped(&light(\"[title=\\\"a, b\\\"] .x { color: red; }\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style (scoped) */
@scope ([data-a="a1b2c3d4"]) to ([data-a]) {
[title="a, b"] .x {
  color: red;
}
}
