crates/aihu-css-core/tests/snapshots/light_scope_snapshot__host_with_comma_list_arg_stays_one_selector_list_not_two.snap
---
source: crates/aihu-css-core/tests/light_scope_snapshot.rs
assertion_line: 158
expression: "compile_sfc_scoped(&light(\":host(.a, .b) { display: block; }\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style (scoped) */
@scope ([data-a="a1b2c3d4"]) to ([data-a]) {
:scope:is(.a, .b) {
  display: block;
}
}
