crates/aihu-css-core/tests/snapshots/light_scope_snapshot__part_lowers_to_a_plain_attribute_selector.snap
---
source: crates/aihu-css-core/tests/light_scope_snapshot.rs
assertion_line: 66
expression: "compile_sfc_scoped(&light(\"::part(thumb) { background: gray; }\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style (scoped) */
@scope ([data-a="a1b2c3d4"]) to ([data-a]) {
[part~="thumb"] {
  background: gray;
}
}
