crates/aihu-css-core/tests/snapshots/light_scope_snapshot__plain_selectors_are_unchanged_inside_the_scope_wrapper.snap
---
source: crates/aihu-css-core/tests/light_scope_snapshot.rs
assertion_line: 27
expression: "compile_sfc_scoped(&light(\".card { color: red; } .card > .title { font-weight: bold; }\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
/* authored @style (scoped) */
@scope ([data-a="a1b2c3d4"]) to ([data-a]) {
.card {
  color: red;
}
.card > .title {
  font-weight: bold;
}
}
